# acorn

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  PROFILE.md  README.md  RELEASE.md  ROADMAP.md  build.rs  codex.sh  module_list.txt
.claude/: settings.json
.github/workflows/: release-windows.yml  run-tests.yml
docs/: certificate_format.md  gtf.md  lowering.md  normalization.md  scoring.md  simplification.md
files/models/: model-20260611-e50-h512-l3.features.json  model-20260611-e50-h512-l3.onnx  model-20260705-consistent-h128-l3.features.json  model-20260705-consistent-h128-l3.onnx
python/: .gitignore  README.md  pyproject.toml  version.py
python/src/acorn_training/: __init__.py  cli.py  data.py  model.py  shard_cli.py  shards.py  train.py
python/tests/: test_training.py
scripts/: eval-policy-wins.py  eval-suite.sh  git-lines-last-100-days.sh  git-recent.sh  publish.sh  release.sh  tag.py  upload.sh  version.py
skills/migrate/: SKILL.md
src/: acorn_value.rs  binding_map.rs  block.rs  build_cache.rs  builder.rs  certificate.rs  certificate_step.rs  certificate_trace.rs  checker.rs  claim_codec.rs  clausifier.rs  cleaner.rs  code_generator.rs  doc_generator.rs  evaluator.rs  exporter.rs  expression.rs  goal_partition.rs  gtf.rs  interfaces.rs  lib.rs  lint.rs  manifest.rs  module.rs  normalizer.rs  packaged_acornlib.rs  processor.rs  project.rs  proof_display.rs  proof_order.rs  server.rs  simplifier.rs  token.rs  verifier.rs
src/certificate/: tests.rs
src/code_generator/: tests.rs
src/elaborator/: block.rs  (+24 more)
vscode/: interfaces.d.ts
(+232 files in other folders)
