[project]
name = "acorn-training"
version = "0.1.0"
description = "Training utilities for Acorn proof-step scoring models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "onnx>=1.16.2",
    "torch>=2.4.1",
    "zstandard>=0.23.0",
]

[project.scripts]
acorn-build-scorer-shards = "acorn_training.shard_cli:main"
acorn-train-scorer = "acorn_training.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
